# matmulfreellmCPU

./: .gitignore  .gitmodules  README.md  generate.py  generate_and_bench.py  matmulfreellmCPU_PLAN.md  requirements.txt
cpp/: CMakeLists.txt
cpp/app/: main.cpp
cpp/include/mmfree/: bench.hpp  config.hpp  kernels.hpp  model.hpp  profile.hpp  simd.hpp  tensor.hpp  ternary_backend.hpp  tokenizer.hpp  weights.hpp
cpp/src/io/: tokenizer.cpp  weights.cpp
cpp/src/kernels/: activations.cpp  bitlinear.cpp  hgrn_scan.cpp  rmsnorm.cpp  rmsnorm_swishgate.cpp
cpp/src/model/: hgrn_model.cpp
cpp/src/util/: bench.cpp  profile.cpp
cpp/tests/: npy.hpp  test_e2e.cpp  test_kernels.cpp
mmfreelm/modules/: activations.py  fused_cross_entropy.py  fused_norm_gate.py  l2norm.py  layernorm.py
mmfreelm/ops/: fusedbitnet.py
tools/: check_tokenizer.py  compare_prompts.py  diagnose_fixed16.py  diagnose_modes.py  dump_golden.py  pack_tokenizer.py  pack_weights.py  provision.py  reference.py  requirements.txt  run_prompt.py  validate_reference.py
